Fixed top navigation on small screen

--- a/style.css
+++ b/style.css
@@ -412,7 +412,7 @@ html {
  .menu-toggle, .main-navigation.toggled ul {
      display: block;
 }
- @media screen and (min-width: 37.5em) {
+ @media screen and (min-width: 47.9em) {
      .menu-toggle {
          display: none;
     }
@@ -958,7 +958,7 @@ footer .footer-info ul li a:hover{
      .main-navigation ul>li>a{
         background: none;
         line-height: 30px;
-        padding: 0;
+        padding: 0 20px;
     }
      .main-navigation ul>li.current-menu-item>a {
     box-shadow: 0px 1px 0 #2A4286 !important;
